force-app/main/default/objects/PhoningVendeur__c/PhoningVendeur__c.object-meta.xml
<CustomObject>
    <description>Elément de liste de phones</description>
    <label>Phone</label>
    <nameField>
        <label>Nom du phone</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Phones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>