force-app/main/default/objects/PhoningVendeur__c/fields/appelEffectue__c.field-meta.xml
<CustomField>
    <fullName>appelEffectue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appel effectué ?</label>
    <type>Checkbox</type>
</CustomField>