force-app/main/default/objects/PhoningVendeur__c/fields/argumentationEffectuee__c.field-meta.xml
<CustomField>
    <fullName>argumentationEffectuee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Argumentation effectuée ?</label>
    <type>Checkbox</type>
</CustomField>