force-app/main/default/objects/PhoningVendeur__c/fields/commentaires__c.field-meta.xml
<CustomField>
    <fullName>commentaires__c</fullName>
    <label>Commentaires</label>
    <length>255</length>
    <type>Text</type>
</CustomField>