force-app/main/default/objects/PhoningVendeur__c/fields/compte__c.field-meta.xml
<CustomField>
    <fullName>compte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Phones</relationshipLabel>
    <relationshipName>compte_Phones</relationshipName>
    <type>Lookup</type>
</CustomField>