force-app/main/default/objects/PhoningVendeur__c/fields/dateHeureRDV__c.field-meta.xml
<CustomField>
    <fullName>dateHeureRDV__c</fullName>
    <label>Date/heure RDV</label>
    <type>DateTime</type>
</CustomField>