force-app/main/default/objects/PhoningVendeur__c/fields/debriefe__c.field-meta.xml
<CustomField>
    <fullName>debriefe__c</fullName>
    <formula>OR(IF(appelEffectue__c, TRUE, FALSE), IF(argumentationEffectuee__c, TRUE, FALSE), NOT(ISNULL(dateHeureRDV__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Débriefé</label>
    <type>Checkbox</type>
</CustomField>