force-app/main/default/objects/PhoningVendeur__c/fields/dureeRDV__c.field-meta.xml
<CustomField>
    <fullName>dureeRDV__c</fullName>
    <label>Durée RDV</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>