force-app/main/default/objects/PhoningVendeur__c/fields/isProcessed__c.field-meta.xml
<CustomField>
    <fullName>isProcessed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>En cours de traitement</label>
    <type>Checkbox</type>
</CustomField>