force-app/main/default/objects/PhoningVendeur__c/fields/liste__c.field-meta.xml
<CustomField>
    <fullName>liste__c</fullName>
    <label>Liste de phones</label>
    <referenceTo>ListePhoningVendeur__c</referenceTo>
    <relationshipLabel>Phones</relationshipLabel>
    <relationshipName>ListePhoning</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>