force-app/main/default/objects/PhoningVendeur__c/fields/projet__c.field-meta.xml
<CustomField>
    <fullName>projet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Projet</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Phones</relationshipLabel>
    <relationshipName>projet_Phones</relationshipName>
    <type>Lookup</type>
</CustomField>