force-app/main/default/objects/PhoningVendeur__c/fields/RDV__c.field-meta.xml
<CustomField>
    <fullName>RDV__c</fullName>
    <label>RDV</label>
    <length>20</length>
    <type>Text</type>
</CustomField>