force-app/main/default/objects/PhoningVendeur__c/validationRules/VR001_K2_Phone_Compte.validationRule-meta.xml
<ValidationRule>
    <fullName>VR001_K2_Phone_Compte</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(compte__c)</errorConditionFormula>
    <errorMessage>Le champ compte associé au Phone ne peut pas être modifié.</errorMessage>
</ValidationRule>