force-app/main/default/objects/PhoningVendeur__c/validationRules/VR001_K2_Phone_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>VR001_K2_Phone_Name</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Name)</errorConditionFormula>
    <errorMessage>Le nom du Phone ne peut pas être modifié.</errorMessage>
</ValidationRule>